fix: handled overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+    overflow-x: hidden;
     --bg-color: #0c0c0c;
     --primary-color: #0d0d0d;
     --secondary-color: #fff;
